--- a/src/styles/SearchBar.scss
+++ b/src/styles/SearchBar.scss
@@ -3,11 +3,11 @@ button {
   cursor: pointer;
 }
 
-input[type="text"] {
+input {
   border-radius: 5px 0 0 5px;
 }
 
-button, input[type="text"] {
+button, input {
   padding: 1em;
   border: 1px solid blue;
   font-size: 1em;
